--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "kartbot-backend",
+  "name": "chatbot-backend",
   "version": "1.0.0",
-  "type": "module",
-  "engines": { "node": ">=18.18" },
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "openai": "^4.55.0"
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
+    "openai": "^4.30.1"
   }
 }
